# postman-like

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: index.html  package.json  tsconfig.app.json
apps/desktop/src/: App.test.ts  App.tsx  api.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/apiqa-core/: Cargo.toml
crates/apiqa-core/src/: bundle.rs  compare.rs  engine.rs  import.rs  lib.rs  model.rs  report.rs  storage.rs
crates/apiqa-core/src/android/: mod.rs
crates/apiqa-core/src/comparison/: mod.rs
crates/apiqa-core/src/correlation/: mod.rs
crates/apiqa-core/src/diagnostics/: mod.rs
crates/apiqa-core/src/events/: mod.rs
crates/apiqa-core/src/issues/: mod.rs
crates/apiqa-core/src/persistence/: artifacts.rs  database.rs  migrations.rs  mod.rs
crates/apiqa-core/src/proxy/: mod.rs
crates/apiqa-core/src/session/: mod.rs
crates/apiqa-core/src/traffic/: mod.rs
docs/: android-certificate-setup.md  architecture.md  known-limitations.md  logcat-diagnostics.md  navigation-removal.md  proxy-setup.md  redaction-and-privacy.md  traffic-comparison.md
fixtures/: server.mjs
fixtures/postman/: basic-v2.1.json  staging-environment.json
memory/: 2026-07-22-delete-curl-paste.md  2026-07-23-continue-application-flow.md  2026-07-24-visible-root-recovery.md  2026-07-25-missing-api-hits.md  2026-07-25-qr-installation-regression.md
scripts/: autonomous_scan.py  local_model_scan.py  requirements-local-model.txt  runtime_diagnostics.py  ui_venus_planner.py
scripts/tests/: test_navigation.py  test_runtime_diagnostics.py
