[workspace]
members = ["crates/apiqa-core", "apps/desktop/src-tauri", "apps/cli"]
resolver = "2"

[workspace.package]
version = "1.0.2"
edition = "2024"
license = "MIT"
authors = ["Prayag"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
flate2 = "1.1.5"
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "multipart", "query", "rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
regex = "1.12.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
url = "2.5.8"
zstd = "0.13.3"

[profile.release]
lto = false
codegen-units = 16
strip = true
