[workspace]
members = ["crates/apiqa-core", "apps/desktop/src-tauri", "apps/cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Prayag"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
blake3 = "1.8.2"
brotli = "8.0.2"
bytes = { version = "1.11.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
flate2 = "1.1.5"
hudsucker = { version = "0.25.0", features = ["http2"] }
http = "1.4.0"
http-body-util = "0.1.3"
mime = "0.3.17"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "multipart", "query", "rustls", "stream"] }
rusqlite = { version = "0.40.1", features = ["bundled", "chrono", "uuid"] }
regex = "1.12.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
similar = "2.7.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.49.0", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
url = "2.5.8"
zstd = "0.13.3"

[profile.release]
lto = false
codegen-units = 16
strip = true
