[package]
name = "apiqa-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "apiqa_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow.workspace = true
apiqa-core = { path = "../../../crates/apiqa-core" }
serde.workspace = true
tauri = { version = "2.11.5", features = [] }
tokio.workspace = true

