[package]
name = "app-tester-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "app_tester_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
androidqa-core = { path = "../../../crates/apiqa-core" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11.5", features = [] }
